Fix bugs: Border shifts text, errors not updating

--- a/css/style.css
+++ b/css/style.css
@@ -153,6 +153,8 @@ input::-ms-clear {
   background-color: transparent;
   border: 1px solid var(--color-border);
   border-radius: var(--border-radius);
+  outline: 2px solid transparent;
+  outline-offset: -2px;
   padding: 0.5rem 2.25rem 0.5rem 0.75rem;
   width: 100%;
   height: 3rem;
@@ -166,8 +168,8 @@ input::-ms-clear {
 
 .form__field:hover .form__input,
 .form__input:focus {
-  outline: none;
-  border: 2px solid var(--color-main-accent);
+  border-color: transparent;
+  outline-color: var(--color-main-accent);
 }
 
 .form__input:autofill,
